--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -22,10 +22,17 @@
       <None Update="Day1\input.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day2\input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Day2\sample.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Day1\Day1.csproj" />
+      <ProjectReference Include="..\Day2\Day2.csproj" />
     </ItemGroup>
 
 </Project>
