Day 5 puzzle solution

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -40,6 +40,12 @@
       <None Update="Day4\sample.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day5\input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Day5\sample.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
@@ -47,6 +53,7 @@
       <ProjectReference Include="..\Day2\Day2.csproj" />
       <ProjectReference Include="..\Day3\Day3.csproj" />
       <ProjectReference Include="..\Day4\Day4.csproj" />
+      <ProjectReference Include="..\Day5\Day5.csproj" />
     </ItemGroup>
 
 </Project>
