--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -46,6 +46,9 @@
       <None Update="Day5\sample.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day6\input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
@@ -54,6 +57,7 @@
       <ProjectReference Include="..\Day3\Day3.csproj" />
       <ProjectReference Include="..\Day4\Day4.csproj" />
       <ProjectReference Include="..\Day5\Day5.csproj" />
+      <ProjectReference Include="..\Day6\Day6.csproj" />
     </ItemGroup>
 
 </Project>
