--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -49,6 +49,12 @@
       <None Update="Day6\input.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day7\input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Day7\sample.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
@@ -58,6 +64,7 @@
       <ProjectReference Include="..\Day4\Day4.csproj" />
       <ProjectReference Include="..\Day5\Day5.csproj" />
       <ProjectReference Include="..\Day6\Day6.csproj" />
+      <ProjectReference Include="..\Day7\Day7.csproj" />
     </ItemGroup>
 
 </Project>
