--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -76,10 +76,17 @@
       <None Update="Day10\sample.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day11\input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Day11\sample.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Day10\Day10.csproj" />
+      <ProjectReference Include="..\Day11\Day11.csproj" />
       <ProjectReference Include="..\Day1\Day1.csproj" />
       <ProjectReference Include="..\Day2\Day2.csproj" />
       <ProjectReference Include="..\Day3\Day3.csproj" />
