--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -94,6 +94,12 @@
       <None Update="Day13\sample.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day14\input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Day14\sample.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
@@ -101,6 +107,7 @@
       <ProjectReference Include="..\Day11\Day11.csproj" />
       <ProjectReference Include="..\Day12\Day12.csproj" />
       <ProjectReference Include="..\Day13\Day13.csproj" />
+      <ProjectReference Include="..\Day14\Day14.csproj" />
       <ProjectReference Include="..\Day1\Day1.csproj" />
       <ProjectReference Include="..\Day2\Day2.csproj" />
       <ProjectReference Include="..\Day3\Day3.csproj" />
