--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -100,6 +100,12 @@
       <None Update="Day14\sample.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day15\input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Day15\sample.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
@@ -108,6 +114,7 @@
       <ProjectReference Include="..\Day12\Day12.csproj" />
       <ProjectReference Include="..\Day13\Day13.csproj" />
       <ProjectReference Include="..\Day14\Day14.csproj" />
+      <ProjectReference Include="..\Day15\Day15.csproj" />
       <ProjectReference Include="..\Day1\Day1.csproj" />
       <ProjectReference Include="..\Day2\Day2.csproj" />
       <ProjectReference Include="..\Day3\Day3.csproj" />
