--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -106,6 +106,12 @@
       <None Update="Day15\sample.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day17\input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Day17\sample.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
@@ -115,6 +121,7 @@
       <ProjectReference Include="..\Day13\Day13.csproj" />
       <ProjectReference Include="..\Day14\Day14.csproj" />
       <ProjectReference Include="..\Day15\Day15.csproj" />
+      <ProjectReference Include="..\Day17\Day17.csproj" />
       <ProjectReference Include="..\Day1\Day1.csproj" />
       <ProjectReference Include="..\Day2\Day2.csproj" />
       <ProjectReference Include="..\Day3\Day3.csproj" />
