--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -118,6 +118,12 @@
       <None Update="Day18\sample.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day19\input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Day19\sample.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
@@ -129,6 +135,7 @@
       <ProjectReference Include="..\Day15\Day15.csproj" />
       <ProjectReference Include="..\Day17\Day17.csproj" />
       <ProjectReference Include="..\Day18\Day18.csproj" />
+      <ProjectReference Include="..\Day19\Day19.csproj" />
       <ProjectReference Include="..\Day1\Day1.csproj" />
       <ProjectReference Include="..\Day2\Day2.csproj" />
       <ProjectReference Include="..\Day3\Day3.csproj" />
