--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -130,6 +130,12 @@
       <None Update="Day19\sample.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day20\input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Day20\sample.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
@@ -144,6 +150,7 @@
       <ProjectReference Include="..\Day18\Day18.csproj" />
       <ProjectReference Include="..\Day19\Day19.csproj" />
       <ProjectReference Include="..\Day1\Day1.csproj" />
+      <ProjectReference Include="..\Day20\Day20.csproj" />
       <ProjectReference Include="..\Day2\Day2.csproj" />
       <ProjectReference Include="..\Day3\Day3.csproj" />
       <ProjectReference Include="..\Day4\Day4.csproj" />
