--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -136,6 +136,12 @@
       <None Update="Day20\sample.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day21\input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Day21\sample.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
@@ -151,6 +157,7 @@
       <ProjectReference Include="..\Day19\Day19.csproj" />
       <ProjectReference Include="..\Day1\Day1.csproj" />
       <ProjectReference Include="..\Day20\Day20.csproj" />
+      <ProjectReference Include="..\Day21\Day21.csproj" />
       <ProjectReference Include="..\Day2\Day2.csproj" />
       <ProjectReference Include="..\Day3\Day3.csproj" />
       <ProjectReference Include="..\Day4\Day4.csproj" />
